--- a/app/src/main/res/drawable/shapes_button_normal.xml
+++ b/app/src/main/res/drawable/shapes_button_normal.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="5dp"
             android:color="#000">    </stroke>
+    <corners
+            android:radius="15dp"/>
     <solid android:color="#5555"/>
 </shape>
