--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -8,17 +8,17 @@
         tools:context=".Setting">
 
     <EditText
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/adress_setting_field"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
             app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/adress_setting_txt"
-            android:hint="192.168.0.4" android:text="192.168.0.4"/>
+            android:hint="192.168.0.4" android:text="192.168.0.4" android:layout_marginStart="8dp"/>
     <TextView
             android:text="adress du server"
             android:layout_width="wrap_content"
@@ -32,6 +32,5 @@
             android:layout_height="wrap_content"
             android:id="@+id/save_btn_setting" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/adress_setting_field"/>
+            app:layout_constraintTop_toBottomOf="@+id/adress_setting_field" android:layout_marginTop="32dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
