--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/app_bar_main"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:id="@+id/layout_de_base_main">
 
     <TextView
             android:layout_width="0dp"
@@ -18,29 +18,34 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.056"
             android:textAlignment="center" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.0"
-            android:id="@+id/textView3"/>
+            android:id="@+id/ilFait_txt"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2" android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" tools:text="26"
-            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
+            android:id="@+id/temperature_main_txt" android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/ilFait_txt" tools:text="26"
+            app:layout_constraintStart_toStartOf="@+id/ilFait_txt" app:layout_constraintEnd_toEndOf="@+id/ilFait_txt"
             android:textAlignment="center" android:textSize="36sp"/>
     <Button
             android:text="Geothermie"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:background="@drawable/shapes_button_normal"
+
             android:id="@+id/geo_main_btn" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintBottom_toTopOf="@+id/clim_main_btn"
-            android:textSize="24sp"/>
+            app:layout_constraintTop_toBottomOf="@+id/temperature_main_txt"
+            app:layout_constraintBottom_toTopOf="@+id/clim_main_btn"
+            android:textSize="24sp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
     <Button
             android:text="clim"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:id="@+id/clim_main_btn"
+            android:background="@drawable/shapes_button_normal"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/geo_main_btn" android:textSize="24sp"/>
+            app:layout_constraintTop_toBottomOf="@+id/geo_main_btn" android:textSize="24sp"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
