--- a/app/src/main/res/layout/activity_define_t.xml
+++ b/app/src/main/res/layout/activity_define_t.xml
@@ -18,9 +18,10 @@
             android:textAllCaps="false"
             android:background="@drawable/button_toggle"
             android:checked="false"
-            android:onClick="onLundiClicked" tools:layout_editor_absoluteY="7dp" android:layout_marginEnd="8dp"
+            android:onClick="onLundiClicked" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"/>
     <ToggleButton
             android:id="@+id/mardi_btn"
             android:text="@string/mardi"
@@ -125,7 +126,7 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/degre_field"
-            android:hint="degrés"
+            android:hint="@string/degr_s"
             app:layout_constraintStart_toStartOf="@+id/duree_field" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toEndOf="@+id/duree_field" app:layout_constraintTop_toBottomOf="@+id/duree_field"
             app:layout_constraintBottom_toTopOf="@+id/sendBtn"/>
@@ -135,7 +136,7 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/hours_field"
-            android:hint="heure"
+            android:hint="@string/heure"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/dimanche_btn"
             app:layout_constraintBottom_toTopOf="@+id/duree_field" app:layout_constraintVertical_bias="0.51"/>
@@ -153,10 +154,10 @@
             android:inputType="number"
             android:ems="10"
             android:id="@+id/duree_field"
-            android:hint="duree"
+            android:hint="@string/duree"
             app:layout_constraintStart_toStartOf="@+id/hours_field" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toEndOf="@+id/hours_field" app:layout_constraintTop_toBottomOf="@+id/hours_field"
-            app:layout_constraintBottom_toTopOf="@+id/degre_field"/>
+            app:layout_constraintBottom_toTopOf="@+id/degre_field" />
     <androidx.constraintlayout.widget.Guideline
             android:orientation="vertical"
             android:layout_width="wrap_content"
