--- a/app/src/main/res/layout/activity_define_t.xml
+++ b/app/src/main/res/layout/activity_define_t.xml
@@ -123,7 +123,7 @@
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="number|numberDecimal"
             android:ems="10"
             android:id="@+id/degre_field"
             android:hint="@string/degr_s"
@@ -138,14 +138,15 @@
             android:id="@+id/hours_field"
             android:hint="@string/heure"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@+id/dimanche_btn"
-            app:layout_constraintBottom_toTopOf="@+id/duree_field" app:layout_constraintVertical_bias="0.51"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/duree_field" app:layout_constraintVertical_bias="0.51"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/dimanche_btn"/>
     <Button
             android:text="@string/menu_send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sendBtn"
-            app:layout_constraintStart_toStartOf="@+id/degre_field" app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="@+id/degre_field" app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintEnd_toEndOf="@+id/degre_field" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/degre_field"/>
     <EditText
@@ -157,12 +158,20 @@
             android:hint="@string/duree"
             app:layout_constraintStart_toStartOf="@+id/hours_field" app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintEnd_toEndOf="@+id/hours_field" app:layout_constraintTop_toBottomOf="@+id/hours_field"
-            app:layout_constraintBottom_toTopOf="@+id/degre_field" />
+            app:layout_constraintBottom_toTopOf="@+id/degre_field"/>
     <androidx.constraintlayout.widget.Guideline
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/guideline2"
             app:layout_constraintGuide_percent="0.5"/>
+    <Button
+            android:text="@string/retour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/retour_define_btn"
+            app:layout_constraintEnd_toEndOf="@+id/degre_field"
+            app:layout_constraintStart_toStartOf="@+id/degre_field" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/degre_field"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 <!--
