--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,12 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="navigation_view">
-
-    <group android:checkableBehavior="single">
+<!--    android:checkableBehavior="single"-->
+    <group >
         <item
                 android:id="@+id/nav_setting"
                 android:icon="@drawable/ic_settings"
-                android:title="Setting"/>
+                android:title="Settings"/>
+        <item
+            android:id="@+id/nav_portail"
+            android:title="Portail"/>
     </group>
 
 </menu>
