--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -39,6 +39,17 @@
                 app:key="topic_portail_pref"
                 app:title="@string/topic_portail_title"
                 app:useSimpleSummaryProvider="true" />
+        <EditTextPreference
+                app:key="topic_volet_up_pref"
+                app:title="@string/topic_volet_up_title"
+                app:useSimpleSummaryProvider="true" />
+        <EditTextPreference
+                app:key="topic_volet_down_pref"
+                app:title="@string/topic_volet_down_title"
+                app:useSimpleSummaryProvider="true" />
+
+
+
 
         <EditTextPreference
                 app:key="user_name_pref"
@@ -48,6 +59,8 @@
                 app:key="password_pref"
                 app:title="@string/password_title"
                 app:useSimpleSummaryProvider="true" />
+
+
 
     </PreferenceCategory>
 
