--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,29 +26,36 @@
             app:layout_constraintTop_toBottomOf="@+id/ilFait_txt" tools:text="26"
             app:layout_constraintStart_toStartOf="@+id/ilFait_txt" app:layout_constraintEnd_toEndOf="@+id/ilFait_txt"
             android:textAlignment="center" android:textSize="36sp"/>
-    <Button
-            android:text="Geothermie"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:background="@drawable/shapes_button_normal"
 
-            android:id="@+id/geo_main_btn"
-            android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@+id/temperature_main_txt"
-            app:layout_constraintBottom_toTopOf="@+id/clim_main_btn" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
     <Button
-            android:text="clim"
+            android:id="@+id/geo_main_btn"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:id="@+id/clim_main_btn"
+            android:layout_marginStart="8dp"
+
+            android:layout_marginEnd="8dp"
             android:background="@drawable/shapes_button_normal"
+            android:text="Geothermie"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/clim_main_btn"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/geo_main_btn"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/arret_main_btn"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/temperature_main_txt" />
+
+    <Button
+            android:id="@+id/clim_main_btn"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/shapes_button_normal"
+            android:text="clim"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/arret_main_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/geo_main_btn" />
     <Button
             android:text="ARRET"
             android:layout_width="0dp"
@@ -59,5 +66,30 @@
             app:layout_constraintTop_toBottomOf="@+id/clim_main_btn" app:layout_constraintHorizontal_bias="0.5"
             android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
             android:background="@drawable/shapes_button_normal" android:textSize="24sp"/>
+
+    <TextView
+            android:id="@+id/status_geo_main"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/geo_main_btn"
+            tools:text="10 -> 12 @ 22" />
+
+    <TextView
+            android:id="@+id/status_clim_main"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clim_main_btn"
+            tools:text="arret" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
