--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -18,18 +18,14 @@
 
     <PreferenceCategory app:title="@string/server_header">
 
-
-
-        <EditTextPreference
-                app:key="addresse_serveur_thermostat_pref"
-                app:title="@string/serveur_thermostat_title"
-                app:useSimpleSummaryProvider="true" />
-
         <EditTextPreference
             app:key="addresse_broker_pref"
             app:title="@string/serveur_mqtt_title"
             app:useSimpleSummaryProvider="true" />
-
+        <EditTextPreference
+                app:key="device_name"
+                app:title="@string/device_name"
+                app:useSimpleSummaryProvider="true" />
         <EditTextPreference
                 app:key="user_name_pref"
                 app:title="@string/user_name_title"
